refactor: streamline code and improve readability across multiple services and analyzers